--- a/theme/moove/templates/custom.mustache
+++ b/theme/moove/templates/custom.mustache
@@ -51,6 +51,8 @@
     {{>theme_moove/inc_start}}
 
     <div id="page" class="container-fluid">
+            {{{ output.full_header }}}
+            {{{ output.course_settings }}}
         <div id="page-content" class="row">
             <div id="region-main-box" class="col-xs-12">
                 {{#hasregionmainsettingsmenu}}
