--- a/theme/moove/scss/moove/_custom.scss
+++ b/theme/moove/scss/moove/_custom.scss
@@ -404,3 +404,207 @@ a.txt-signup {
     border-color: #863e8a;
     text-decoration:none;
 }
+.nocourse {
+    text-align: center;
+    padding: 15px;
+}
+.panel-heading.migrate-batch{
+    background-color: #212940!important;
+}
+.migrate-batch{
+    .panel-heading{
+        background: #222a40!important;
+        color:#fff!important;
+        font-size:16px!important;
+    }
+}
+
+@bg: #2d2d37;
+@primary: #fd6b21;
+.arrow {
+  text-align: left;
+  margin: 2% 0;
+}
+.bounce {
+  -moz-animation: bounce 2s infinite;
+  -webkit-animation: bounce 2s infinite;
+  animation: bounce 2s infinite;
+}
+
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-30px);
+  }
+  60% {
+    transform: translateY(-15px);
+  }
+}
+#arrowdown{
+    .fa-2x{
+        margin-left:5%;
+    }
+}
+
+
+.maindirect{
+    .btn {
+      margin-top:30px;
+      padding:2.2% 5.5%;
+      display:inline-block;
+      -webkit-transition:all linear 0.15s;
+      transition:all linear 0.15s;
+      border-radius:3px;
+      background:#fff;
+      font-size:22px;
+      font-weight: bold;
+      text-decoration:none;
+      text-transform:uppercase;
+      color:#333;
+      
+      &:hover {
+        opacity:0.75;
+      }
+    }
+}
+
+.popup-wrap {
+  width:100%;
+  height:100%;
+  display:none;
+  position:absolute;
+  top:0px;
+  left:0px;
+  content:'';
+  z-index: 999;
+  background:rgba(0,0,0,0.85);
+}
+
+.popup-box {
+  width:400px;
+  padding:70px;
+  transform:translate(-50%, -50%) scale(0.5);
+  position:absolute;
+  top:50%;
+  left:50%;
+  box-shadow:0px 2px 16px rgba(0,0,0,0.5);
+  border-radius:3px;
+  background:#fff;
+  text-align:center;
+  
+  .close-btn {
+    width:35px;
+    height:35px;
+    display:inline-block;
+    position:absolute;
+    top:10px;
+    right:10px;
+    -webkit-transition:all ease 0.5s;
+    transition:all ease 0.5s;
+    border-radius:1000px;
+    background:#d75f70;
+    font-weight:bold;
+    text-decoration:none;
+    color:#fff;
+    line-height:190%;
+    
+    &:hover {
+      -webkit-transform:rotate(180deg);
+      transform:rotate(180deg);
+    }
+  }
+}
+
+.transform-in, .transform-out {
+  display:block;
+  -webkit-transition:all ease 0.5s;
+  transition:all ease 0.5s;
+}
+
+.transform-in {
+    -webkit-transform:translate(-50%, -50%) scale(1);
+    transform:translate(-50%, -50%) scale(1);
+}
+
+.transform-out {
+    -webkit-transform:translate(-50%, -50%) scale(0.5);
+    transform:translate(-50%, -50%) scale(0.5);
+}
+
+/* Tab Navigation */
+.userdash{
+    padding: 10px;
+    background: #fff;
+
+  .nav-tabs {
+    margin: 0;
+    padding: 0;
+    border: 0;    
+  }
+  .nav>li {
+      width: 33.33%;
+      background: #fff;
+  }
+  .nav-tabs > li > a {
+      background: #DADADA;
+      border-radius: 0;
+      box-shadow: inset 0 -8px 7px -9px rgba(0,0,0,.4),-2px -2px 5px -2px rgba(0,0,0,.4);
+  }
+  .nav-tabs > li.active > a,
+  .nav-tabs > li.active > a:hover {
+      background: #F5F5F5;
+      box-shadow: inset 0 0 0 0 rgba(0,0,0,.4),-2px -3px 5px -2px rgba(0,0,0,.4);
+  }
+
+  /* Tab Content */
+  .tab-pane {
+      border-radius: 0;
+      text-align: center;
+      padding: 10px;
+      min-height: 200px;
+      max-height: fit-content;
+  }
+}
+#exTab3 {
+    h3 {
+      color : white;
+      background-color:inherit!important;
+      padding : 5px 15px;
+    } 
+    .nav-tabs>li{
+        width:33.33%!important;
+        background: #fff;
+    }
+    .nav-tabs>li.active>a{
+        color: #fff;
+        background-color: #333e5f;
+        border: 1px solid #ddd;
+        border-bottom-color: transparent;
+        text-align: center;
+        text-transform: uppercase;
+    }
+    .nav>li>a {
+        padding: 20px 15px!important;
+        color: #333e5f;
+        text-transform: uppercase;
+        text-align: center;
+    } 
+    .nav-tabs{
+        border-bottom: 1px solid #f2f2f2;
+        margin-bottom: 1px!important;
+    }
+    .nav>li>a:hover, .nav>li>a:focus{
+        color: #fff;
+        background-color: #333e5f;
+        border: 1px solid #ddd;
+        border-bottom-color: transparent;
+        text-align: center;
+        text-transform: uppercase;
+    }
+    .tab-content>.active{
+        padding: 10px;
+    }
+}
+
